🚀 최신 분석 기능 및 AutoML 최적화 반영

--- a/.env
+++ b/.env
@@ -2,9 +2,16 @@
 BINANCE_API_KEY=your_api_key_here
 BINANCE_SECRET_KEY=your_secret_key_here
 
-# Telegram Bot Token
-TELEGRAM_BOT_TOKEN=your_telegram_bot_token
-TELEGRAM_CHAT_ID=your_telegram_chat_id
+# Telegram Bot API Keys
+TELEGRAM_BOT_TRADE=your_trade_alert_bot_token
+TELEGRAM_BOT_MARKET=your_market_analysis_bot_token
+TELEGRAM_BOT_SYSTEM=your_system_monitor_bot_token
+TELEGRAM_BOT_RISK=your_risk_management_bot_token
+TELEGRAM_BOT_CONTROL=your_trading_control_bot_token
+TELEGRAM_CHAT_ID=your_chat_id
+
+# Database Settings
+DATABASE_URL=sqlite:///stealthtrade.db
 
 # tRPC API URL
 TRPC_API_URL=http://localhost:3000
