🚀 최신 분석 기능 및 AutoML 최적화 반영

--- a/.env
+++ b/.env
@@ -3,11 +3,11 @@ BINANCE_API_KEY=your_api_key_here
 BINANCE_SECRET_KEY=your_secret_key_here
 
 # Telegram Bot API Keys
-TELEGRAM_BOT_TRADE=your_trade_alert_bot_token
-TELEGRAM_BOT_MARKET=your_market_analysis_bot_token
-TELEGRAM_BOT_SYSTEM=your_system_monitor_bot_token
-TELEGRAM_BOT_RISK=your_risk_management_bot_token
-TELEGRAM_BOT_CONTROL=your_trading_control_bot_token
+TELEGRAM_BOT_TRADE="7796363399:AAGIiNQTZjWqr9cchXSXJ336EITFhEcrJXo"
+TELEGRAM_BOT_MARKET="8109748953:AAF2Djf4V7OJba9hmXuTiNQBDjkCbTVn3Gk"
+TELEGRAM_BOT_SYSTEM="7591902778:AAGifR--1P2xSclDtCcKa3-YvGBj7pTJGJg"
+TELEGRAM_BOT_RISK="7374237212:AAEWIDqFR6HA-YSuW4Vo54GJi3jW_La_UT8"
+TELEGRAM_BOT_CONTROL="7728133735:AAEz0tLUnTrFl2Xt9LP0ywU560Zz4LrvleU"
 TELEGRAM_CHAT_ID=your_chat_id
 
 # Database Settings
