🚀 최신 분석 기능 및 AutoML 최적화 반영

--- a/.env
+++ b/.env
@@ -4,11 +4,15 @@ BINANCE_SECRET_KEY=your_secret_key_here
 
 # Telegram Bot API Keys
 TELEGRAM_BOT_TRADE="7796363399:AAGIiNQTZjWqr9cchXSXJ336EITFhEcrJXo"
+TELEGRAM_CHAT_ID="400978881"
 TELEGRAM_BOT_MARKET="8109748953:AAF2Djf4V7OJba9hmXuTiNQBDjkCbTVn3Gk"
+TELEGRAM_CHAT_ID="218169397"
 TELEGRAM_BOT_SYSTEM="7591902778:AAGifR--1P2xSclDtCcKa3-YvGBj7pTJGJg"
+TELEGRAM_CHAT_ID="948229263"
 TELEGRAM_BOT_RISK="7374237212:AAEWIDqFR6HA-YSuW4Vo54GJi3jW_La_UT8"
+TELEGRAM_CHAT_ID="73382697"
 TELEGRAM_BOT_CONTROL="7728133735:AAEz0tLUnTrFl2Xt9LP0ywU560Zz4LrvleU"
-TELEGRAM_CHAT_ID=your_chat_id
+TELEGRAM_CHAT_ID="276495792"
 
 # Database Settings
 DATABASE_URL=sqlite:///stealthtrade.db
